Stubbed out cell neighbor detection on click

--- a/app.css
+++ b/app.css
@@ -18,6 +18,11 @@ html body {
   position: absolute;
 }
 
+.alive,
 .cell:hover {
   background:#F00Baa;
+}
+
+.origin {
+  border:1px solid green;
 }
